fixing dropdown alignment

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -140,7 +140,6 @@ body > header {
 
 .dropdown-content {
     position: absolute;
-    right: 3rem;
     min-width: 150px;
     display: none;
     flex-direction: column;
